--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/PDPZTY-VqS8?si=mNkXKv-bOKEs4ul-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+    <section class="categoria">
+        <h2>Outros Videos</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=lcPTDc9vHkE">
+                <img src="https://img.youtube.com/vi/lcPTDc9vHkE/maxresdefault.jpg">
+            </a>
+        </div>
+    </section>
     
 </body>
 </html>
