--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
             <a href="https://www.youtube.com/watch?v=lcPTDc9vHkE">
                 <img src="https://img.youtube.com/vi/lcPTDc9vHkE/maxresdefault.jpg">
             </a>
+            <a href="https://www.youtube.com/watch?v=yE9_FyDHKrU">
+                <img src="https://img.youtube.com/vi/yE9_FyDHKrU/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=LNtlSzd7veM">
+                <img src="https://img.youtube.com/vi/LNtlSzd7veM/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=lcPTDc9vHkE">
+                <img src="https://img.youtube.com/vi/lcPTDc9vHkE/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=YAZOCtLMNmI">
+                <img src="https://img.youtube.com/vi/YAZOCtLMNmI/maxresdefault.jpg">
+            </a>
         </div>
     </section>
     
